--- a/styles/spot.css
+++ b/styles/spot.css
@@ -149,8 +149,36 @@ input.ui-widget-content {
   background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#000));
 }
 .green-button {
+  height: 42px;
+  color: #446c12;
+  font-size: 1em;
+  font-weight: bold;
   border: 1px solid #b5db87;
 	background: -webkit-gradient(linear, left top, left bottom, from(#baf05e), to(#62b200));
 	background: -moz-linear-gradient(top, #baf05e, #62b200);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#baf05e', endColorstr='#62b200')
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#baf05e', endColorstr='#62b200');
+
+	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+	-webkit-border-radius: .2em;
+	-moz-border-radius: .2em;
+	border-radius: .2em;
+  
+  margin-right:-2px;
+  cursor: pointer;
+  cursor: hand;
+
+}
+
+.form-email-felt {
+  width: 100%;
+  height:30px;
+}
+.form-email p{
+  margin-top: 10px;
+}
+.form-email {
+  position: absolute;
+  bottom: 10px;
+  text-align: right;
+  
 }
