--- a/styles/plugin-override.css
+++ b/styles/plugin-override.css
@@ -17,13 +17,15 @@ root {
 
 .imageflow img {
   border:.5em solid #fff;
+  cursor: none;
 }
 
 .imageflow {
-  margin-top: 100px;
-  width: 80%;
+  margin-top: 130px;
+  width: 90%;
   height: 100%;
-  border: 1px dashed red;
+/*  border: 1px dashed red;*/
+  z-index: 100;
 }
 
 #fancybox-close {
