--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,6 +283,33 @@ input.ui-widget-content {
   color:#000; 
 }
 
+#result p	{ 
+  text-align: center;
+  margin: 10px;
+  padding-bottom: 6px;
+  font: 1.2em bold;
+  -webkit-border-radius: 1.6em;
+  -moz-border-radius: 1.6em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+}
+
+.result {
+  margin: 10px;
+  padding: 7px 6px 0;
+  line-height: 100%;
+  border-radius: 2em;
+  -webkit-border-radius: 2em;
+  -moz-border-radius: 2em;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+  background: #8B8B8B;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a9a9a9', endColorstr='#7a7a7a');
+  background: -webkit-gradient(linear, left top, left bottom, from(darkGray), to(#7A7A7A));
+  background: -moz-linear-gradient(top, darkGray, #7A7A7A);
+  border: solid 1px #6D6D6D;
+}
+
+
 /* irrelevante styles fjernes herunder */
 
 * { font-family:verdana, arial, helvetica, sans-serif; } 
@@ -293,7 +320,7 @@ input.ui-widget-content {
 /*#header,#footer { height:50px;}*/
 
 
-#result 	{ padding:6px 0;font-weight: bold}
+
 
 #bookdata img 	{ width: 100px;height:auto;float:left;padding:0 5px 5px 0; }
 
