--- a/styles/styles2013.css
+++ b/styles/styles2013.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Document   : spot.css
     Created on : 20-10-2011, 11:31:40
     Author     : azkb073
@@ -7,7 +7,7 @@
 */
 
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -21,8 +21,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -33,7 +33,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -56,12 +56,12 @@ table {
 	border-spacing: 0;
 }
 
-root { 
+root {
   display: block;
 }
 
 html {
-  height: 100%;  
+  height: 100%;
 }
 
 /* ------------------  */
@@ -70,13 +70,10 @@ body {
   background: url('../images/body-bg.png') repeat;
   min-height: 100%;
   width: 100%;
-  /*cursor: none;*/
-  
 }
 
 .wrapper {
   width: 100%;
-  /*cursor: none;*/
 }
 
 .body-header {
@@ -87,31 +84,31 @@ body {
 }
 
 @media (min-width: 600px){
-.slogan {
-  /*background: url('../images/slogan.png') no-repeat;*/
-  font: 1.2em  Arial,Helvetica,sans-serif ;
-  color: #ffffff;
-  right: 10px;
-  bottom:10px;
-  position: absolute;
-  overflow: hidden;
-}
+  .slogan {
+    /*background: url('../images/slogan.png') no-repeat;*/
+    font: 1.2em  Arial,Helvetica,sans-serif ;
+    color: #ffffff;
+    right: 10px;
+    bottom:10px;
+    position: absolute;
+    overflow: hidden;
+  }
 }
 @media (max-width: 600px){
-.slogan {
-  /*background: url('../images/slogan.png') no-repeat;*/
-  font: .5em  Arial,Helvetica,sans-serif ;
-  color: #ffffff;
-  right: 10px;
-  bottom:10px;
-  position: absolute;
-  overflow: hidden;
-}
+  .slogan {
+    /*background: url('../images/slogan.png') no-repeat;*/
+    font: .5em  Arial,Helvetica,sans-serif ;
+    color: #ffffff;
+    right: 10px;
+    bottom:10px;
+    position: absolute;
+    overflow: hidden;
+  }
 
-.popup-wrapper {
-  font-size: .9em;
-  width: 100%;
-}
+  .popup-wrapper {
+    font-size: .9em;
+    width: 100%;
+  }
 }
 
 #main  {
@@ -119,7 +116,7 @@ body {
   top: -25px;
   /*position: absolute;*/
   margin: 0px auto;
-} 
+}
 
 .logo {
   background: url('../images/e-reolen.png') no-repeat;
@@ -153,12 +150,12 @@ body {
 .slider-arrow-left,
 .slider-arrow-right {
 /*fixed pos aligner arrows til outer div, absolute aligner til main*/
-  position: absolute; 
+  position: absolute;
   /*margin-top: 20%; *//*positionering*/
   top: 45%;
   width: 8%;
   z-index: 200;
-  
+
 }
 
 .slider-arrow-left img,
@@ -210,13 +207,13 @@ input.ui-widget-content {
 	-webkit-border-radius: .2em;
 	-moz-border-radius: .2em;
 	border-radius: .2em;
-  
+
   cursor: pointer;
   cursor: hand;
 }
 
-.desc { 
-  font-size: 90% 
+.desc {
+  font-size: 90%
 }
 
 .email-text {
@@ -247,7 +244,10 @@ input.ui-widget-content {
   font-family: Arial,Helvetica,sans-serif;
   font-size: .9em;
   line-height: 150%;
-  margin: 5px; 
+  margin: 5px;
+  width: 352px;
+  height: 450px;
+  color:#000;
 }
 .popup-form h3 {
   font-weight: bold;
@@ -255,22 +255,7 @@ input.ui-widget-content {
 
 .submit {
   text-align: right;
-  margin-right: 2px; 
-}
-
-#fancybox-wrap {
-  margin: 0; 
-  z-index: 20000;
-  /*max-width: 25%;*/
-}
-#fancybox-inner {
-  overflow: hidden;  
-}
-
-#popup { 
-  width: 352px;
-  height: 450px; 
-  color:#000; 
+  margin-right: 2px;
 }
 
 .message-info {
@@ -315,34 +300,30 @@ input.ui-widget-content {
   padding-left: 50px;
 }
 
-/* irrelevante styles fjernes herunder */
-
-* { font-family:verdana, arial, helvetica, sans-serif; } 
-
+* { font-family:verdana, arial, helvetica, sans-serif; }
 
 #bookdata img 	{ width: 100px;height:auto;float:left;padding:0 5px 5px 0; }
 
 #myform {  clear:both;}
 
-label 			{ width: 4em; float: left; text-align: right; margin-right: 0.5em; display: block } 
-.submit input 	{ margin-left: 4.5em; } 	
+label 			{ width: 4em; float: left; text-align: right; margin-right: 0.5em; display: block }
+.submit input 	{ margin-left: 4.5em; }
 
-
-root { 
+root {
   display: block;
 }
 
 .imageflow img {
   border:.5em solid #fff;
- /* cursor: none;*/
 }
 
-.imageflow {
- /* margin-top: 130px;*/
- /* width: 90%;*/
- /* height: 400px; 100%;*/
- /* border: 1px dashed red;*/
-  /*z-index: 100;*/
+.fancybox-wrap {
+  margin: 0;
+  z-index: 20000;
+}
+
+.fancybox-inner {
+  overflow: hidden;
 }
 
 #fancybox-close {
@@ -358,7 +339,7 @@ root {
 	display: none;
 }
 
-.ui-keyboard{ padding: .3em; position: absolute; z-index: 30000;}
+.ui-keyboard{ padding: .3em; /*position: absolute; z-index: 30000;*/}
 .ui-keyboard-button{height: 3em; width: 3em; margin: .1em;}
 .ui-keyboard-button span {font-size: 1.5em;}
 .ui-keyboard-actionkey{width: 6em;}
@@ -367,7 +348,8 @@ root {
 
 #menucontainer{ height:40px; background-color:black; }
 
-#menu { position:relative; z-index: 10000; margin-left: auto ;  margin-right: auto ; width:600px;}
-
+#menu { position:relative; z-index: 5000; margin-left: auto ;  margin-right: auto ; width:600px;}
 #menu li { display:inline-block; width: auto; }
 #menu li.sub { display:block; width: auto;}
+#menu  > .ui-menu-item { width: 150px;background: #000; }
+.ui-widget-content { border: none; background:#000; };
