--- a/styles/styles2013v3.css
+++ b/styles/styles2013v3.css
@@ -62,10 +62,12 @@ body {
 background: url('../images/body-bg.png') repeat;
 min-height: 100%;
 width: 100%;
+height: 100%;
 }
 
 .wrapper {
 width: 100%;
+height: 100%;
 }
 
 .body-header {
@@ -310,13 +312,12 @@ display: none;
 margin: 0 auto;
 padding:30px 120px 30px 120px;
 position: relative;
-height: 510px;
 }
 
 .jcarousel {
 position: relative;
 overflow: hidden;
-height: 510px;
+height: 506px;
 }
 
 .jcarousel ul {
@@ -335,5 +336,6 @@ padding: 0 80px 0 0;
 .jcarousel img {
 border:3px solid #fff;
 max-width:330px;
+max-height: 500px;
 width:330px;
 }
