--- a/styles/styles2013v3.css
+++ b/styles/styles2013v3.css
@@ -295,7 +295,7 @@ z-index: 1103;
 display: none;
 }
 
-.ui-keyboard{ padding: .3em; /*position: absolute; z-index: 30000;*/}
+.ui-keyboard{ padding: .3em; }
 .ui-keyboard-button{height: 3em; width: 3em; margin: .1em;}
 .ui-keyboard-button span {font-size: 1.5em;}
 .ui-keyboard-actionkey{width: 6em;}
@@ -330,12 +330,9 @@ padding: 0;
 
 .jcarousel li {
 float: left;
-padding: 0 80px 0 0;
 }
 
 .jcarousel img {
 border:3px solid #fff;
-max-width:330px;
-max-height: 500px;
-width:330px;
+margin: 0 80px 0 0;
 }
